# CPP_SMFL_TypeChallange_game

./: CMakeLists.txt  README.md  main.cpp
Assets/WordsList/: wordsList_1.txt
Assets/records/: records.txt
sourceCodes/: Menu.cpp  Menu.hpp  RecordMng.cpp  RecordMng.hpp  RecordsMenu.cpp  RecordsMenu.hpp  gameStart.cpp  gameStart.hpp  wordGenerator.cpp  wordGenerator.hpp
